--- a/_posts/2020-02-25-Pragyan-ctf-2020.md
+++ b/_posts/2020-02-25-Pragyan-ctf-2020.md
@@ -1,6 +1,6 @@
-#Category :Forensics
+#Category-Forensics
 
-##Points:100
+#Points-100
 
 **Description**=Mr. Robot is being sent to future. But accidently he lost his passkey 
 which he needs to activate the Time Machine. But he is smart and had 
